# TR1X

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  justfile
src/libtrx/: benchmark.c  enum_map.c  event_manager.c  filesystem.c  log.c  log_linux.c  log_windows.c  memory.c  meson.build  screenshot.c  vector.c  version.h  virtual_file.c
src/libtrx/config/: common.c  file.c  file.h  map.c  map.def  map.h  map_tr1.def  map_tr2.def  priv.c  priv.h  priv_tr1.c  priv_tr2.c  vars.c
src/libtrx/engine/: audio.c  audio_sample.c  audio_stream.c  image.c  video.c
src/libtrx/game/: clock.c  fader.c  game.c  game_buf.c  game_string.c  gamebuf.c  interpolation.c  inventory.c  items.c  matrix.c  music.c  output.c  packer.c  random.c  savegame.c  sound.c  text.c  text.def  text_tr1.def  text_tr2.def
src/libtrx/game/anims/: commands.c  common.c  frames.c
src/libtrx/game/camera/: cinematic.c  common.c  fixed.c  photo_mode.c  vars.c
src/libtrx/game/clock/: common.c  timer.c  turbo.c
src/libtrx/game/console/: common.c  history.c  internal.h  registry.c
src/libtrx/game/console/cmd/: config.c  die.c  end_level.c  exit_game.c  exit_to_title.c  flipmap.c  fly.c  give_item.c  heal.c  kill.c  load_game.c  music.c  play_cutscene.c  play_demo.c  play_gym.c  play_level.c  pos.c  save_game.c  set_health.c  sfx.c  speed.c  teleport.c
src/libtrx/game/demo/: common.c
src/libtrx/game/game_flow/: common.c  reader.c  reader_tr1.def.c  reader_tr2.def.c  sequencer.c  sequencer_events.c  sequencer_misc.c  sequencer_priv.h
src/libtrx/game/game_string_table/: aliases.def  aliases_tr1.def  aliases_tr2.def  common.c  priv.c  priv.h  reader.c
src/libtrx/game/gun/: common.c
src/libtrx/game/input/: common.c
src/libtrx/game/input/backends/: controller.c  keyboard.c
src/libtrx/game/inventory_ring/: priv.c
src/libtrx/game/lara/: common.c
src/libtrx/game/level/: common.c
src/libtrx/game/math/: trig.c  util.c
src/libtrx/game/objects/: common.c  names.c  vars.c
src/libtrx/game/output/: common.c  textures.c
src/libtrx/game/phase/: executor.c  phase_cutscene.c  phase_demo.c  phase_game.c  phase_inventory.c  phase_pause.c  phase_photo_mode.c  phase_picture.c  phase_stats.c
src/libtrx/game/rooms/: common.c  draw.c
src/libtrx/game/shell/: common.c
src/libtrx/game/ui/: common.c  events.c
src/libtrx/game/ui/widgets/: console.c  frame.c  label.c  photo_mode.c  prompt.c  requester.c  spacer.c  stack.c  window.c
src/libtrx/gfx/: context.c  screenshot.c
src/libtrx/gfx/2d/: 2d_renderer.c  2d_surface.c
src/libtrx/gfx/3d/: 3d_renderer.c  vertex_stream.c
src/libtrx/gfx/fade/: fade_renderer.c
src/libtrx/gfx/gl/: buffer.c  gl_core_3_3.c  program.c  sampler.c  texture.c  utils.c  vertex_array.c
src/libtrx/gfx/renderers/: fbo_renderer.c  legacy_renderer.c
src/libtrx/include/libtrx/: bson.h  config.h  debug.h  filesystem.h  json.h  memory.h  output.h  screenshot.h  utils.h  vector.h  virtual_file.h
src/libtrx/include/libtrx/config/: common.h  file.h  types.h  types_tr1.h  types_tr2.h  vars.h
src/libtrx/include/libtrx/engine/: audio.h  image.h  video.h
src/libtrx/include/libtrx/game/: anims.h  camera.h  clock.h  collision.h  const.h  creature.h  cutscene.h  demo.h  effects.h  enum_map.def  fader.h  fmv.h  game.h  game_buf.h  game_flow.h  game_string.def  game_string.h  game_string_table.h  gamebuf.h  gameflow.h  gun.h  inject.h  input.h  interpolation.h  inventory.h  inventory_ring.h  item_actions.h  level.h  lot.h  math.h  matrix.h  music.h  output.h  overlay.h  packer.h  phase.h  random.h  rooms.h  savegame.h  shell.h  (+4 more)
src/libtrx/include/libtrx/game/anims/: common.h  enum.h  types.h  util.h
src/libtrx/include/libtrx/game/camera/: cinematic.h  common.h  const.h  enum.h  fixed.h  photo_mode.h  types.h  vars.h
src/libtrx/include/libtrx/game/clock/: common.h  const.h  timer.h  turbo.h
src/libtrx/include/libtrx/game/console/: common.h  enum.h  registry.h  types.h
src/libtrx/include/libtrx/game/effects/: const.h  types.h
src/libtrx/include/libtrx/game/game_flow/: common.h  enum.h  sequencer.h  types.h  vars.h
src/libtrx/include/libtrx/game/gameflow/: common.h  types.h
src/libtrx/include/libtrx/game/inject/: common.h  types.h
src/libtrx/include/libtrx/game/input/: common.h  role.h  roles.def  roles_tr1.def  roles_tr2.def  state.h
src/libtrx/include/libtrx/game/inventory_ring/: control.h  draw.h  enum.h  priv.h  types.h  vars.h
src/libtrx/include/libtrx/game/items/: common.h  const.h  enum.h  types.h
src/libtrx/include/libtrx/game/lara/: cheat.h  common.h  enum.h  enum_tr1.h  enum_tr2.h  types.h
src/libtrx/include/libtrx/game/level/: common.h  types.h
src/libtrx/include/libtrx/game/math/: const.h  func.h  types.h
src/libtrx/include/libtrx/game/music/: common.h  const.h  enum.h  ids.def  ids.h  ids_tr1.def  ids_tr2.def
src/libtrx/include/libtrx/game/objects/: common.h  ids.h  ids_tr1.def  ids_tr2.def  names.h  names_tr1.def  names_tr2.def  setup.h  types.h  vars.h
src/libtrx/include/libtrx/game/output/: common.h  const.h  textures.h  types.h  vars.h
src/libtrx/include/libtrx/game/phase/: common.h  control.h  executor.h  phase_cutscene.h  phase_demo.h  phase_game.h  phase_inventory.h  phase_pause.h  phase_photo_mode.h  phase_picture.h  phase_stats.h  types.h
src/libtrx/include/libtrx/game/rooms/: common.h  const.h  draw.h  enum.h  types.h
src/libtrx/include/libtrx/game/sound/: common.h  enum.h  ids.def  ids.h  ids_tr1.def  ids_tr2.def  types.h
src/libtrx/include/libtrx/game/ui/: common.h
src/libtrx/include/libtrx/gfx/: common.h  config.h  context.h  screenshot.h
src/libtrx/include/libtrx/gfx/2d/: 2d_renderer.h  2d_surface.h
src/libtrx/include/libtrx/gfx/3d/: 3d_renderer.h  vertex_stream.h
src/libtrx/include/libtrx/gfx/gl/: utils.h  (+5 more)
src/libtrx/include/libtrx/strings/: common.h  fuzzy_match.h
src/libtrx/json/: bson_parse.c  bson_write.c  json_base.c  json_parse.c  json_write.c
src/libtrx/strings/: common.c  fuzzy_match.c
(+955 files in other folders)
